--- a/src/app/home-page/recent-item-list/recent-item-list.component.html
+++ b/src/app/home-page/recent-item-list/recent-item-list.component.html
@@ -1,18 +1,30 @@
 <ng-container *ngVar="(itemRD$ | async) as itemRD">
-        <div class="mt-4" [ngClass]="placeholderFontClass" *ngIf="itemRD?.hasSucceeded && itemRD?.payload?.page.length > 0" @fadeIn>
-                <div class="d-flex flex-row border-bottom mb-4 pb-4"></div>
-                <h2> {{'home.recent-submissions.head' | translate}}</h2>
-                <ul class="list-unstyled m-0 p-0">
-                  <li class="my-4" *ngFor="let item of itemRD?.payload?.page">
-                    <ds-listable-object-component-loader [object]="item" [viewMode]="viewMode" class="pb-4">
-                    </ds-listable-object-component-loader>
-                  </li>
-                </ul>
-                <button (click)="onLoadMore()" class="btn btn-primary search-button mt-4" role="link" tabindex="0">
-                  {{'vocabulary-treeview.load-more' | translate }} ...
-                </button>
+  <div class="mt-4" [ngClass]="placeholderFontClass" *ngIf="itemRD?.hasSucceeded && itemRD?.payload?.page.length > 0" @fadeIn>
+    <div class="d-flex flex-row border-bottom mb-4 pb-4"></div>
+    <h2 class="text-center">{{'home.recent-submissions.head' | translate}}</h2>
+    
+    <!-- Grid layout ngang -->
+    <div class="row g-4 mt-4">
+      <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let item of itemRD?.payload?.page">
+        <div class="card h-100">
+          <ds-listable-object-component-loader 
+            [object]="item" 
+            [viewMode]="viewMode" 
+            class="card-body p-0">
+          </ds-listable-object-component-loader>
         </div>
-        <ds-error *ngIf="itemRD?.hasFailed" message="{{'error.recent-submissions' | translate}}"></ds-error>
-        <ds-loading *ngIf="!itemRD || itemRD.isLoading" message="{{'loading.recent-submissions' | translate}}">
-        </ds-loading>
+      </div>
+    </div>
+    
+    <!-- Button căn phải như trong hình -->
+    <div class="text-right mt-4">
+      <button (click)="onLoadMore()" class="btn btn-outline-primary search-button px-4 py-2" role="link" tabindex="0">
+        {{'vocabulary-treeview.load-more' | translate }}
+      </button>
+    </div>
+  </div>
+  
+  <ds-error *ngIf="itemRD?.hasFailed" message="{{'error.recent-submissions' | translate}}"></ds-error>
+  <ds-loading *ngIf="!itemRD || itemRD.isLoading" message="{{'loading.recent-submissions' | translate}}">
+  </ds-loading>
 </ng-container>
