--- a/src/app/shared/object-list/search-result-list-element/item-search-result/item-types/item/item-search-result-list-element.component.html
+++ b/src/app/shared/object-list/search-result-list-element/item-search-result/item-types/item/item-search-result-list-element.component.html
@@ -1,46 +1,46 @@
-<div class="row">
-  <div *ngIf="showThumbnails" class="col-3 col-md-2">
+<div class="row align-items-center">
+  <div *ngIf="showThumbnails" class="col-auto pr-0">
     <a *ngIf="linkType != linkTypes.None" [target]="(linkType == linkTypes.ExternalLink) ? '_blank' : '_self'" [attr.rel]="(linkType == linkTypes.ExternalLink) ? 'noopener noreferrer' : null"
        [routerLink]="[itemPageRoute]" class="dont-break-out" role="link" tabindex="-1">
-    <ds-thumbnail [thumbnail]="dso?.thumbnail | async" [limitWidth]="true">
-    </ds-thumbnail>
+      <ds-thumbnail [thumbnail]="dso?.thumbnail | async" [limitWidth]="true"></ds-thumbnail>
     </a>
     <span *ngIf="linkType == linkTypes.None" class="dont-break-out">
-    <ds-thumbnail [thumbnail]="dso?.thumbnail | async" [limitWidth]="true">
-    </ds-thumbnail>
+      <ds-thumbnail [thumbnail]="dso?.thumbnail | async" [limitWidth]="true"></ds-thumbnail>
     </span>
   </div>
-  <div [ngClass]="showThumbnails ? 'col-9' : 'col-md-12'">
-    <div class="d-flex">
+  <div [ngClass]="showThumbnails ? 'col' : 'col-12'">
+    <div class="d-flex align-items-start mb-1">
       <ds-themed-badges *ngIf="showLabel" [object]="dso" [context]="context" [showAccessStatus]="true"></ds-themed-badges>
-    </div>
-
-    <ds-truncatable [id]="dso.id" *ngIf="object !== undefined && object !== null">
-      <a *ngIf="linkType != linkTypes.None" [target]="(linkType == linkTypes.ExternalLink) ? '_blank' : '_self'" [attr.rel]="(linkType == linkTypes.ExternalLink) ? 'noopener noreferrer' : null"
-         [routerLink]="[itemPageRoute]" class="lead item-list-title dont-break-out"
-         [innerHTML]="dsoTitle" role="link" tabindex="0"></a>
-      <span *ngIf="linkType == linkTypes.None" class="lead item-list-title dont-break-out"
-            [innerHTML]="dsoTitle"></span>
-      <span class="text-muted">
-        <ds-truncatable-part [id]="dso.id" [minLines]="1">
-          <ng-container *ngIf="dso.firstMetadataValue('dc.publisher') || dso.firstMetadataValue('dc.date.issued')">
-            (<span *ngIf="dso.firstMetadataValue('dc.publisher')" class="item-list-publisher" [innerHTML]="firstMetadataValue('dc.publisher')"></span>
-            <span *ngIf="dso.firstMetadataValue('dc.publisher') && dso.firstMetadataValue('dc.date.issued')">, </span>
-          <span *ngIf="dso.firstMetadataValue('dc.date.issued')" class="item-list-date" [innerHTML]="firstMetadataValue('dc.date.issued')"></span>)
-          </ng-container>
-          <span *ngIf="dso.allMetadata(['dc.contributor.author', 'dc.creator', 'dc.contributor.*']).length > 0" class="item-list-authors">
+      <div class="flex-grow-1">
+        <ds-truncatable [id]="dso.id" *ngIf="object !== undefined && object !== null">
+          <!-- 1. Tên tác phẩm -->
+          <a *ngIf="linkType != linkTypes.None" [target]="(linkType == linkTypes.ExternalLink) ? '_blank' : '_self'" [attr.rel]="(linkType == linkTypes.ExternalLink) ? 'noopener noreferrer' : null"
+             [routerLink]="[itemPageRoute]" class="lead item-list-title dont-break-out"
+             [innerHTML]="dsoTitle" role="link" tabindex="0"></a>
+          <span *ngIf="linkType == linkTypes.None" class="lead item-list-title dont-break-out"
+                [innerHTML]="dsoTitle"></span>
+          <!-- 2. Tác giả -->
+          <span *ngIf="dso.allMetadata(['dc.contributor.author', 'dc.creator', 'dc.contributor.*']).length > 0" class="item-list-authors d-block">
             <span *ngFor="let author of allMetadataValues(['dc.contributor.author', 'dc.creator', 'dc.contributor.*']); let last=last;">
-                <span [innerHTML]="author"><span [innerHTML]="author"></span></span>
-                <span *ngIf="!last">; </span>
+              <span [innerHTML]="author"></span><span *ngIf="!last">; </span>
             </span>
           </span>
-        </ds-truncatable-part>
-      </span>
-      <div *ngIf="dso.firstMetadataValue('dc.description.abstract')" class="item-list-abstract">
-        <ds-truncatable-part [id]="dso.id" [minLines]="3"><span
-          [innerHTML]="firstMetadataValue('dc.description.abstract')"></span>
-        </ds-truncatable-part>
+          <!-- 3. Nhà xuất bản + năm xuất bản (năm thôi) -->
+          <span class="text-muted d-block">
+            <ng-container *ngIf="dso.firstMetadataValue('dc.publisher') || dso.firstMetadataValue('dc.date.issued')">
+              <span *ngIf="dso.firstMetadataValue('dc.publisher')" class="item-list-publisher" [innerHTML]="firstMetadataValue('dc.publisher')"></span>
+              <span *ngIf="dso.firstMetadataValue('dc.publisher') && dso.firstMetadataValue('dc.date.issued')">, </span>
+              <span *ngIf="dso.firstMetadataValue('dc.date.issued')" class="item-list-date" [innerHTML]="(firstMetadataValue('dc.date.issued') | date:'yyyy')"></span>
+            </ng-container>
+          </span>
+          <!-- 4. Mô tả -->
+          <span *ngIf="dso.firstMetadataValue('dc.description.abstract')" class="item-list-abstract d-block">
+            <ds-truncatable-part [id]="dso.id" [minLines]="3">
+              <span [innerHTML]="firstMetadataValue('dc.description.abstract')"></span>
+            </ds-truncatable-part>
+          </span>
+        </ds-truncatable>
       </div>
-    </ds-truncatable>
+    </div>
   </div>
 </div>
