--- a/src/app/thumbnail/thumbnail.component.html
+++ b/src/app/thumbnail/thumbnail.component.html
@@ -7,8 +7,8 @@
     </div>
   </div>
   <!-- don't use *ngIf="!(isLoading$ | async)" so the thumbnail can load in while the animation is playing -->
-  <img *ngIf="(src$ | async) !== null" class="thumbnail-content img-fluid" [ngClass]="{'d-none': (isLoading$ | async)}"
-       [src]="(src$ | async) | dsSafeUrl" [alt]="alt | translate" (error)="errorHandler()" (load)="successHandler()">
+  <img *ngIf="(src$ | async) !== null" class="thumbnail-content" [ngClass]="{'d-none': (isLoading$ | async)}"
+    [src]="(src$ | async) | dsSafeUrl" [alt]="alt | translate" (error)="errorHandler()" (load)="successHandler()">
   <div *ngIf="(src$ | async) === null && !(isLoading$ | async)" class="thumbnail-content outer">
     <div class="inner">
       <div class="thumbnail-placeholder centered lead">
