--- a/src/app/shared/object-list/search-result-list-element/item-search-result/item-types/item/item-search-result-list-element.component.html
+++ b/src/app/shared/object-list/search-result-list-element/item-search-result/item-types/item/item-search-result-list-element.component.html
@@ -1,44 +1,79 @@
-<div class="row align-items-center">
-  <div *ngIf="showThumbnails" class="col-auto pr-0">
-    <a *ngIf="linkType != linkTypes.None" [target]="(linkType == linkTypes.ExternalLink) ? '_blank' : '_self'" [attr.rel]="(linkType == linkTypes.ExternalLink) ? 'noopener noreferrer' : null"
-       [routerLink]="[itemPageRoute]" class="dont-break-out" role="link" tabindex="-1">
+<div class="row">
+  <!-- Cột chứa thumbnail -->
+  <div *ngIf="showThumbnails" class="col-auto pr-3">
+    <a *ngIf="linkType != linkTypes.None"
+       [target]="(linkType == linkTypes.ExternalLink) ? '_blank' : '_self'"
+       [attr.rel]="(linkType == linkTypes.ExternalLink) ? 'noopener noreferrer' : null"
+       [routerLink]="[itemPageRoute]"
+       class="dont-break-out"
+       role="link"
+       tabindex="-1">
       <ds-thumbnail [thumbnail]="dso?.thumbnail | async" [limitWidth]="true"></ds-thumbnail>
     </a>
     <span *ngIf="linkType == linkTypes.None" class="dont-break-out">
       <ds-thumbnail [thumbnail]="dso?.thumbnail | async" [limitWidth]="true"></ds-thumbnail>
     </span>
   </div>
+
+  <!-- Cột chứa nội dung -->
   <div [ngClass]="showThumbnails ? 'col' : 'col-12'">
-    <div class="d-flex align-items-start mb-1">
-      <ds-themed-badges *ngIf="showLabel" [object]="dso" [context]="context" [showAccessStatus]="true"></ds-themed-badges>
+    <div class="d-flex flex-column h-100">
+
+      <!-- Label đưa lên trên -->
+      <div class="mb-1">
+        <ds-themed-badges *ngIf="showLabel"
+                          [object]="dso"
+                          [context]="context"
+                          [showAccessStatus]="true"
+                          class="d-inline-block">
+        </ds-themed-badges>
+      </div>
+
+      <!-- Nội dung chính -->
       <div class="flex-grow-1">
         <ds-truncatable [id]="dso.id" *ngIf="object !== undefined && object !== null">
+          
           <!-- 1. Tên tác phẩm -->
-          <a *ngIf="linkType != linkTypes.None" [target]="(linkType == linkTypes.ExternalLink) ? '_blank' : '_self'" [attr.rel]="(linkType == linkTypes.ExternalLink) ? 'noopener noreferrer' : null"
-             [routerLink]="[itemPageRoute]" class="lead item-list-title dont-break-out"
-             [innerHTML]="dsoTitle" role="link" tabindex="0"></a>
-          <span *ngIf="linkType == linkTypes.None" class="lead item-list-title dont-break-out"
+          <a *ngIf="linkType != linkTypes.None"
+             [target]="(linkType == linkTypes.ExternalLink) ? '_blank' : '_self'"
+             [attr.rel]="(linkType == linkTypes.ExternalLink) ? 'noopener noreferrer' : null"
+             [routerLink]="[itemPageRoute]"
+             class="lead item-list-title dont-break-out"
+             [innerHTML]="dsoTitle"
+             role="link"
+             tabindex="0"></a>
+          <span *ngIf="linkType == linkTypes.None"
+                class="lead item-list-title dont-break-out"
                 [innerHTML]="dsoTitle"></span>
+
           <!-- 2. Tác giả -->
-          <span *ngIf="dso.allMetadata(['dc.contributor.author', 'dc.creator', 'dc.contributor.*']).length > 0" class="item-list-authors d-block">
+          <span *ngIf="dso.allMetadata(['dc.contributor.author', 'dc.creator', 'dc.contributor.*']).length > 0"
+                class="item-list-authors d-block">
             <span *ngFor="let author of allMetadataValues(['dc.contributor.author', 'dc.creator', 'dc.contributor.*']); let last=last;">
               <span [innerHTML]="author"></span><span *ngIf="!last">; </span>
             </span>
           </span>
-          <!-- 3. Nhà xuất bản + năm xuất bản (năm thôi) -->
+
+          <!-- 3. Nhà xuất bản + năm xuất bản -->
           <span class="text-muted d-block">
             <ng-container *ngIf="dso.firstMetadataValue('dc.publisher') || dso.firstMetadataValue('dc.date.issued')">
-              <span *ngIf="dso.firstMetadataValue('dc.publisher')" class="item-list-publisher" [innerHTML]="firstMetadataValue('dc.publisher')"></span>
+              <span *ngIf="dso.firstMetadataValue('dc.publisher')"
+                    class="item-list-publisher"
+                    [innerHTML]="firstMetadataValue('dc.publisher')"></span>
               <span *ngIf="dso.firstMetadataValue('dc.publisher') && dso.firstMetadataValue('dc.date.issued')">, </span>
-              <span *ngIf="dso.firstMetadataValue('dc.date.issued')" class="item-list-date" [innerHTML]="(firstMetadataValue('dc.date.issued') | date:'yyyy')"></span>
+              <span *ngIf="dso.firstMetadataValue('dc.date.issued')"
+                    class="item-list-date"
+                    [innerHTML]="(firstMetadataValue('dc.date.issued') | date:'yyyy')"></span>
             </ng-container>
           </span>
+
           <!-- 4. Mô tả -->
           <span *ngIf="dso.firstMetadataValue('dc.description.abstract')" class="item-list-abstract d-block">
             <ds-truncatable-part [id]="dso.id" [minLines]="3">
               <span [innerHTML]="firstMetadataValue('dc.description.abstract')"></span>
             </ds-truncatable-part>
           </span>
+
         </ds-truncatable>
       </div>
     </div>
