--- a/src/app/thumbnail/thumbnail.component.scss
+++ b/src/app/thumbnail/thumbnail.component.scss
@@ -5,6 +5,7 @@
 img {
   width: 150px !important;
   height: 230px !important;
+  object-fit: cover;
 }
 
 ::ng-deep .thumbnail-content.img-fluid {
@@ -12,13 +13,14 @@ img {
   height: 200px !important;
 }
 
-.outer {  // .outer/.inner generated ~ https://ratiobuddy.com/
+.outer {
+  // .outer/.inner generated ~ https://ratiobuddy.com/
   position: relative;
   &:before {
     display: block;
     content: "";
     width: 100%;
-    padding-top: calc((297 / 210) * 100%);  // A4 ratio
+    padding-top: calc((297 / 210) * 100%); // A4 ratio
   }
   > .inner {
     position: absolute;
