--- a/src/app/bitstream-page/bitstream-download-page/bitstream-download-page.component.html
+++ b/src/app/bitstream-page/bitstream-download-page/bitstream-download-page.component.html
@@ -1,8 +1,34 @@
 <div class="container">
-  <h1 class="h2">{{'bitstream.download.page' | translate:{ bitstream: dsoNameService.getName((bitstream$ | async)) } }}</h1>
+  <h1 class="h2">
+    {{ 'bitstream.download.page' | translate:{ bitstream: dsoNameService.getName((bitstream$ | async)) } }}
+  </h1>
+
   <div class="pt-3">
-    <button (click)="back()" class="btn btn-outline-secondary">
-      <i class="fas fa-arrow-left"></i> {{'bitstream.download.page.back' | translate}}
+    <button (click)="back()" class="btn btn-outline-secondary mb-3">
+      <i class="fas fa-arrow-left"></i> {{ 'bitstream.download.page.back' | translate }}
+    </button>
+  </div>
+
+  <div class="card p-4 shadow-sm">
+    <h5 class="mb-3">Tải xuống file được mã hóa bằng LCP</h5>
+
+    <div class="mb-3">
+      <label>Email:</label>
+      <input type="text" class="form-control" [(ngModel)]="userEmail" readonly>
+    </div>
+
+    <div class="mb-3">
+      <label>Tên người dùng:</label>
+      <input type="text" class="form-control" [(ngModel)]="userName" readonly>
+    </div>
+
+    <div class="mb-3">
+      <label>Mật khẩu:</label>
+      <input type="password" class="form-control" [(ngModel)]="userPassword" placeholder="Nhập mật khẩu để cấp license">
+    </div>
+
+    <button (click)="downloadEncrypted()" class="btn btn-success w-100 mt-2">
+      <i class="fas fa-lock"></i> Tải xuống file mã hóa (LCP)
     </button>
   </div>
 </div>
