--- a/src/app/shared/file-download-link/file-download-link.component.html
+++ b/src/app/shared/file-download-link/file-download-link.component.html
@@ -1,14 +1,19 @@
-<a [routerLink]="(bitstreamPath$| async)?.routerLink" class="dont-break-out"
-   [queryParams]="(bitstreamPath$| async)?.queryParams"
-   [target]="isBlank ? '_blank': '_self'"
-   [ngClass]="cssClasses"
-   [attr.aria-label]="('file-download-link.download' | translate) + dsoNameService.getName(bitstream)"
-   role="link"
-   tabindex="0">
-  <span *ngIf="!(canDownload$ |async)" [attr.aria-label]="'file-download-link.restricted' | translate" class="pr-1"><i class="fas fa-lock"></i></span>
-  <ng-container *ngTemplateOutlet="content"></ng-container>
-</a>
+<div class="pdf-actions">
+  <a href="javascript:void(0)" (click)="openPDFWithoutToolbar()" class="btn btn-preview">
+    Preview
+  </a>
 
-<ng-template #content>
-  <ng-content></ng-content>
-</ng-template>
+  <a [routerLink]="(bitstreamPath$| async)?.routerLink"
+     class="btn btn-download"
+     [queryParams]="(bitstreamPath$| async)?.queryParams"
+     [target]="isBlank ? '_blank': '_self'"
+     role="link"
+     tabindex="0">
+
+    <span *ngIf="!(canDownload$ | async)" class="pr-1">
+      <i class="fas fa-lock"></i>
+    </span>
+
+    <span>Download</span>
+  </a>
+</div>
