feat: add translation for homepage in EN, restrict to upload only pdf for item

--- a/src/themes/dspace/app/home-page/home-news/home-news.component.html
+++ b/src/themes/dspace/app/home-page/home-news/home-news.component.html
@@ -4,38 +4,29 @@
       <div class="d-flex flex-wrap">
         <div>
           <h1 class="display-3" style="font-size:3.5rem; font-weight:700;">
-            Thư viện số HCMUTE
+            {{ 'home.digital-library' | translate }}
           </h1>
           <p class="lead" style="font-size:1.5rem; line-height:1.6;">
-            Nền tảng lưu trữ và chia sẻ học liệu số hiện đại, hỗ trợ giảng viên, sinh viên 
-            và nhà nghiên cứu của Trường Đại học Sư phạm Kỹ thuật TP. Hồ Chí Minh:
+            {{ 'home.description.title' | translate }}
           </p>
         </div>
       </div>
       <ul style="font-size:1.2rem; line-height:1.6;">
-        <li>Dễ dàng nộp và quản lý luận văn, luận án, giáo trình, báo cáo khoa học, 
-            dữ liệu nghiên cứu cùng siêu dữ liệu chuẩn Dublin Core</li>
-        <li>Mở rộng khả năng truy cập học liệu đến cộng đồng trong và ngoài trường, 
-            với khả năng tích hợp công cụ tìm kiếm học thuật và chuẩn trao đổi OAI-PMH</li>
-        <li>Cung cấp các đường dẫn cố định và định danh tin cậy, hỗ trợ tích hợp 
-            với hệ thống định danh quốc tế như DOI hoặc Handle</li>
-        <li>Tạo môi trường học tập và nghiên cứu mở, giúp sinh viên và giảng viên 
-            dễ dàng tiếp cận, chia sẻ và trao đổi học liệu</li>
-        <li>Hỗ trợ kết nối, lưu trữ và quảng bá các công trình nghiên cứu khoa học của 
-            HCMUTE đến cộng đồng học thuật trong nước và quốc tế</li>
+        <li>{{'home.description.dublin-core-standard' | translate}}</li>
+        <li>{{'home.description.accessibility-standard' | translate}}</li>
+        <li>{{'home.description.reliable-link' | translate}}</li>
+        <li>{{'home.description.open-environment' | translate}}</li>
+        <li>{{'home.description.networking' | translate}}</li>
       </ul>
       <p style="font-size:1.2rem; line-height:1.6;">
-        Thư viện số HCMUTE là một phần trong hệ sinh thái học liệu điện tử của Nhà trường, 
-        góp phần nâng cao chất lượng giảng dạy, nghiên cứu và thúc đẩy chia sẻ tri thức.
+        {{ 'home.description.summary' | translate }}
       </p>
     </div>
   </div>
 
   <picture class="background-image">
-    <img 
-      alt="Custom Banner" 
-      src="https://res.cloudinary.com/dh7w9mvrq/image/upload/v1744577513/471306834_1312910153458292_2571871794578179435_n_w28hmt.jpg" 
-      style="width: 100%; height: auto; object-fit: cover;"
-    />
+    <img alt="Custom Banner"
+      src="https://res.cloudinary.com/dh7w9mvrq/image/upload/v1744577513/471306834_1312910153458292_2571871794578179435_n_w28hmt.jpg"
+      style="width: 100%; height: auto; object-fit: cover;" />
   </picture>
 </div>
